--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -16,7 +16,7 @@
 
   <div class="author__content">
     <h3 class="author__name">{{ author.name }}</h3>
-    {% if author.bio %}<p class="author__bio">{{ author.bio }}{% endif %}\n
+    {% if author.bio %}<p class="author__bio">{{ author.bio }}{% endif %}<br>
     {% if author.email %}Email: {{ author.email }}{% endif %}</p>
   </div>
 
