--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -12,6 +12,17 @@
   {% assign title = post.title %}
 {% endif %}
 
+
+
+
+<div>
+  <p>{{post.title}}. Published in {{post.venue}}, {{post.location}}, {{post.date}}. (with {{post.with}})</p>
+</div>
+
+
+
+
+
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
