--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -16,36 +16,7 @@
 
 
 <div>
-  <p>{{post.title}}. Published in {{post.venue}}, {{post.location}}, {{post.date}}. (with {{post.with}})</p>
+  <p>{{title}}. Published in {{post.venue}}, {{post.location}}, {{post.date}}. (with {{post.with}})</p>
 </div>
 
 
-
-
-
-<div class="{{ include.type | default: "list" }}__item">
-  <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-    {% if include.type == "grid" and teaser %}
-      <div class="archive__item-teaser">
-        <img src=
-          {% if teaser contains "://" %}
-            "{{ teaser }}"
-          {% else %}
-            "{{ teaser | prepend: "/images/" | prepend: base_path }}"
-          {% endif %}
-          alt="">
-      </div>
-    {% endif %}
-    <h2 class="archive__item-title" itemprop="headline">
-      {% if post.link %}
-        <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
-      {% else %}
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
-      {% endif %}
-    </h2> 
-    <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {{ post.date | date: '%B %d, %Y' }}</p>
-    <p class="archive__item-excerpt" itemprop="description">
-      <span>with {{ post.with }} in {{ post.venue }}.</span>
-    </p>
-  </article>
-</div>
