--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -14,7 +14,7 @@
 </div>
 
 
-<button type="button" class="collapsible">Abstract</button>
+<!-- <button type="button" class="collapsible">Abstract</button>
 <div class="content">
   <p>{{post.abstract}}</p>
-</div>
+</div> -->
