--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -11,10 +11,9 @@
 
 <div>
   <p><b>{{title}}.</b> Published in {{post.venue}}, {{post.location}}, {{post.date}}. <i>(with {{post.with}})</i> [{{ post.links }}]</p>
-</div>
 
-
-<!-- <button type="button" class="collapsible">Abstract</button>
+<button type="button" class="collapsible">Abstract</button>
 <div class="content">
   <p>{{post.abstract}}</p>
-</div> -->
+</div> 
+</div>
