--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -10,7 +10,7 @@
 
 
 <div>
-  <p><b>{{title}}.</b> Published in {{post.venue}}, {{post.location}}, {{post.date}}. <i>(with {{post.with}})</i> [{{ post.links }}]</p>
+  <p><b>{{title}}.</b> Published in {{post.venue}}, {{post.location}}, {{post.year}}. <i>(with {{post.with}})</i> [{{ post.links }}]</p>
 </div>
 <button type="button" class="collapsible">Abstract</button>
 <div class="content">
