--- a/_includes/archive-single-teach.html
+++ b/_includes/archive-single-teach.html
@@ -30,6 +30,6 @@
       {{title}}
     </h2>
         {% if post.collection == 'teaching' %}
-          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+          <p> {{ post.link }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
   </article>
 </div>
